@@ -91,6 +91,8 @@ Trunk (not yet released)
     AVRO-1257. Ruby: Fix UTF-8 encoding in Ruby 1.9.
     (Martin Kleppmann via cutting)
 
+    AVRO-1258. Ruby: Fix handing of RPC errors.  (Martin Kleppmann via cutting)
+
 Avro 1.7.3 (6 December 2012)
 
   NEW FEATURES
